# creative-console-daemon

./: .gitignore  Cargo.toml  README.md  config.ctrl-win.toml  config.example.streamdeck.toml  config.example.toml  restart.bat  restart.ps1
src/: config.rs  daemon.rs  main.rs
src/actions/: hotkey.rs  media_keys.rs  mod.rs  obs.rs  webhook.rs  webhook_poll.rs
src/hid/: device.rs  lcd.rs  mod.rs  protocol.rs  streamdeck.rs
