[package]
name = "creative-console-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = "2.6"
tokio = { version = "1", features = ["full"] }
obws = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
